<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.prohor.universe</groupId>
    <artifactId>jawa</artifactId>
    <version>final</version>
    <packaging>pom</packaging>
    <name>jawa</name>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <kotlin.version>2.2.0</kotlin.version>
        <kotlin.compiler.jvmTarget>21</kotlin.compiler.jvmTarget>
        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
    </properties>

    <modules>
        <module>jocasta</module>
        <module>padawan</module>
        <module>padawan-kt</module>
        <module>scarif</module>
        <module>sabacc</module>
        <module>yoda</module>
        <module>boba-fett</module>
        <module>hyperspace</module>
        <module>venator</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>3.5.6</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.18.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/jakarta.annotation/jakarta.annotation-api -->
            <dependency>
                <groupId>jakarta.annotation</groupId>
                <artifactId>jakarta.annotation-api</artifactId>
                <version>3.0.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>2.14.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
            <dependency>
                <groupId>com.auth0</groupId>
                <artifactId>java-jwt</artifactId>
                <version>4.5.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/dev.morphia.morphia/morphia-core -->
            <dependency>
                <groupId>dev.morphia.morphia</groupId>
                <artifactId>morphia-core</artifactId>
                <version>2.5.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync -->
            <dependency>
                <groupId>org.mongodb</groupId>
                <artifactId>mongodb-driver-sync</artifactId>
                <version>5.5.1</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>2.20.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>2.20.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-xml</artifactId>
                <version>2.20.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>2.20.1</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.38</version>
                <scope>provided</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.mongodb/bson -->
            <dependency>
                <groupId>org.mongodb</groupId>
                <artifactId>bson</artifactId>
                <version>5.5.1</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>1.10.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/caffeine -->
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>3.2.2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>4.12.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.telegram/telegrambots -->
            <dependency>
                <groupId>org.telegram</groupId>
                <artifactId>telegrambots</artifactId>
                <version>6.9.7.1</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
            <dependency>
                <groupId>com.googlecode.json-simple</groupId>
                <artifactId>json-simple</artifactId>
                <version>1.1.1</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.json/json -->
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>20250517</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/net.bramp.ffmpeg/ffmpeg -->
            <dependency>
                <groupId>net.bramp.ffmpeg</groupId>
                <artifactId>ffmpeg</artifactId>
                <version>0.8.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>1.21.2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.fusesource.jansi/jansi -->
            <dependency>
                <groupId>org.fusesource.jansi</groupId>
                <artifactId>jansi</artifactId>
                <version>2.4.2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>2.0.17</version>
            </dependency>


            <!-- Tests -->


            <!-- https://mvnrepository.com/artifact/org.skyscreamer/jsonassert -->
            <dependency>
                <groupId>org.skyscreamer</groupId>
                <artifactId>jsonassert</artifactId>
                <version>1.5.3</version>
                <scope>test</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.13.1</version>
                <scope>test</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>5.13.1</version>
                <scope>test</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>5.13.1</version>
                <scope>test</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-commons -->
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-commons</artifactId>
                <version>1.14.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-engine -->
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-engine</artifactId>
                <version>1.14.0</version>
                <scope>test</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher -->
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-launcher</artifactId>
                <version>1.14.0</version>
                <scope>test</scope>
            </dependency>


            <!-- Kotlin -->


            <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib -->
            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-stdlib</artifactId>
                <version>${kotlin.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.module/jackson-module-kotlin -->
            <dependency>
                <groupId>com.fasterxml.jackson.module</groupId>
                <artifactId>jackson-module-kotlin</artifactId>
                <version>2.20.1</version>
            </dependency>


            <!-- Universe -->


            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-core</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-spring</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-morphia</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-spring-web</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-joda-time</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>scarif-jwt</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>scarif-jwt-provider</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-jackson-joda-time</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-jackson-morphia</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-jackson-core</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-tg-bots</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>yahtzee-core</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>yahtzee-offline</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>yahtzee-online</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>yahtzee-stats</artifactId>
                <version>final</version>
            </dependency>
            <dependency>
                <groupId>ru.prohor.universe</groupId>
                <artifactId>jocasta-morphia-configuration</artifactId>
                <version>final</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.9.9,)</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[21,22)</version>
                                </requireJavaVersion>
                            </rules>
                            <failFast>true</failFast>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <argLine>-ea -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-maven-plugin</artifactId>
                    <version>${kotlin.version}</version>
                    <executions>
                        <execution>
                            <id>compile</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>test-compile</id>
                            <phase>test-compile</phase>
                            <goals>
                                <goal>test-compile</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <args>
                            <arg>-Xjsr305=strict</arg>
                        </args>
                        <compilerPlugins>
                            <plugin>spring</plugin>
                        </compilerPlugins>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.jetbrains.kotlin</groupId>
                            <artifactId>kotlin-maven-allopen</artifactId>
                            <version>${kotlin.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>3.5.4</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
